--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Calculator.GrayButtons"
+        android:theme="@style/Theme.Material3.Light.NoActionBar"
         tools:targetApi="31">
-        <activity
-            android:name=".Login"
-            android:exported="false" />
-        <activity
-            android:name=".constraintLayout"
-            android:exported="true">
-        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
